infrastructure/apps/powerdns/pdns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: powerdns
  name: pdns
  namespace: powerdns
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http01"
spec:
  ingressClassName: nginx
  rules:
    - host: ${PDNS_API_INGRESS:=dns.sharing.io}
      http:
        paths:
          - backend:
              service:
                name: auth-web
                port:
                  number: 8081
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: "pdns-tls"
      hosts:
        - ${PDNS_API_INGRESS:=dns.sharing.io}
